# pulseaudio-policy-enforcement

./: configure.ac  meson.build  meson_options.txt
rpm/: pulseaudio-policy-enforcement.spec
src/: Makefile.am  card-ext.c  card-ext.h  classify.c  classify.h  client-ext.c  client-ext.h  config-file.c  config-file.h  context.c  context.h  dbusif.c  dbusif.h  log.c  log.h  match.c  match.h  meson.build  module-policy-enforcement.c  policy-group.c  policy-group.h  policy.c  policy.h  port-ext.c  port-ext.h  sink-ext.c  sink-ext.h  sink-input-ext.c  sink-input-ext.h  source-ext.c  source-ext.h  source-output-ext.c  userdata.h  variable.c  variable.h
